Conent/Style: Changed my about me to represent what I actually wanted there. / Fixing some responsive issues and general style/layout problems.

--- a/css/luis.css
+++ b/css/luis.css
@@ -19,13 +19,14 @@ html {
 h1 {
     text-align: center;
 	font-family: Gabriela, "Times New Roman", serif;
+	font-size: 2em;
 }
 
 p {
 /*    text-align: center;*/
 	font-family: Cabin, Arial, monospace;
 	margin: 10px;
-	line-height: 1.4em;
+	line-height: 1.35em;
 }
 
 /* Navigation bar styling -------------------------------------- */
@@ -53,7 +54,7 @@ nav li a {
   display: block;
   color: black;
   text-align: center;
-  padding: 14px 16px;
+  padding: 0.5em 0.5em;
   margin-left: 2px;
   text-decoration: none;
 }
@@ -67,7 +68,7 @@ nav li a:hover {
 ===============================*/
 .grid-contain {
 	display: grid;
-	grid-template: 360px 300px / 1fr 1fr;
+	grid-template: 450px 450px / 1fr 1fr;
 	grid-column-gap: 80px;
 }
 
@@ -107,7 +108,7 @@ nav li a:hover {
 /*	margin: 50px;*/
 	align-self: center;
 	justify-self: center;
-	font-size: 1.25em;
+	font-size: 1.15em;
 }
 
 .aboutMe-text h2 {
@@ -147,40 +148,21 @@ nav li a:hover {
 
 /* Responsive Media Queries
 ===============================*/
-
-/* another setup
- /*Mobile first queries 
-
-/* Larger than mobile 
-@media (min-width: 400px) {}
-
-/* Larger than phablet 
-@media (min-width: 550px) {}
-
-/* Larger than tablet 
-@media (min-width: 750px) {}
-
-/* Larger than desktop 
-@media (min-width: 1000px) {}
-
-/* Larger than Desktop HD 
-@media (min-width: 1200px) {}
-
-*/
 @media only screen and (max-width: 20em) {
-		div.grid-contain {
-		grid-template: 150px 350px 370px / 1fr;
+	body div.grid-contain {
+		grid-template: 250px 320px 830px / 1fr;
 		grid-column-gap: 0px;
 	}
 	
 	.profile-links {
 		grid-column-start: 1;
+		grid-row-start: 2;
 		justify-self: center;
 		margin-left: 20px;
 	}
 	
 	.profile-links h1 {
-		font-size: 1.3em;
+		font-size: 1.7em;
 	}
 	
 	.profile-pic {
@@ -191,16 +173,17 @@ nav li a:hover {
 	
 	.aboutMe-text {
 		grid-column-start: 1;
+		grid-row-start: 3;
 		padding: 2em;
 	}
 	
 	li img {
-		width: 30px;
+		width: 40px;
 		
 	}
 	
 	img#logo {
-		width: 30px;
+		width: 40px;
 	}
 	
 	.aboutMe-text {
@@ -211,7 +194,7 @@ nav li a:hover {
 @media only screen and (min-width: 20em) and (max-width: 36em) {
 /*	mobile styles go here */
 	div.grid-contain {
-		grid-template: 320px 280px 350px / 1fr;
+		grid-template: repeat(auto-fill, minmax(300px, 1fr))  / 1fr;
 		grid-column-gap: 0px;
 	}
 	
@@ -236,6 +219,7 @@ nav li a:hover {
 @media only screen and (min-width: 36em) and (max-width: 48em) {
 /*	tablet styles go here*/
 	.grid-contain {
+		grid-template: repeat(auto-fill, minmax(250px, 1fr)) / repeat(auto-fill, minmax(250px, 1fr));
 		grid-column-gap: 40px;
 	}
 	
@@ -346,11 +330,11 @@ nav li a:hover {
 }
 
 .leading {
-  height: 10em;
+  height: 16em;
   margin-bottom: 0;
   padding: 0em;
   color: white;
-  background-image: url('../grids/index_files/skylinedraft.svg');
+  background-image: url('../grids/index_files/skylinedraft2.svg');
   background-position: center bottom;
   background-color:  #fff;
   background-repeat: no-repeat;
@@ -360,7 +344,7 @@ nav li a:hover {
 
 .leading-text {
   max-width: 900px;
-  font-size: 1.2em;
+  font-size: 1.5em;
   line-height: 1.4em;
 }
 
